--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ head>
   <meta name="description" content="Keble UIPrototype
 ">
 
-  <link rel="stylesheet" href="/css/app.css">
+  <link rel="stylesheet" href="http://renderwell.github.io/keble.uiprototype/css/app.css">
   <link rel="stylesheet" href="/css/app.css.map">
   <link rel="canonical" href="http://renderwell.co.uk/">
   <link rel="alternate" type="application/rss+xml" title="Keble UIPrototype" href="http://renderwell.co.uk/feed.xml">
