--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
-head>
+<head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Keble UIPrototype</title>
-  <meta name="description" content="Keble UIPrototype
-">
+  <meta name="description" content="Keble UIPrototype">
 
   <link rel="stylesheet" href="http://renderwell.github.io/keble.uiprototype/css/app.css">
   <link rel="stylesheet" href="/css/app.css.map">
