--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <meta name="description" content="Keble UIPrototype">
 
   <link rel="stylesheet" href="http://renderwell.github.io/keble.uiprototype/css/app.css">
-  <link rel="stylesheet" href="/css/app.css.map">
-  <link rel="canonical" href="http://renderwell.co.uk/">
-  <link rel="alternate" type="application/rss+xml" title="Keble UIPrototype" href="http://renderwell.co.uk/feed.xml">
+  <link rel="stylesheet" href="http://renderwell.github.io/keble.uiprototype/css/app.css.map">
+  <link rel="canonical" href="http://renderwell.github.io/keble.uiprototype">
+  <link rel="alternate" type="application/rss+xml" title="Keble UIPrototype" href="http://renderwell.github.io/keble.uiprototype/feed.xml">
   
-  <script src="/js/modernizr.js"></script>
+  <script src="http://renderwell.github.io/keble.uiprototype/js/modernizr.js"></script>
 </head>
 
 <body>
@@ -24,11 +24,11 @@
     <div class="row site-header-inner">
         <div class="site-header-top clearfix">
             <a class="site-logo left" href="/" role="button" tabindex="0">
-                <img src="/img/kc_logo.gif" />
+                <img src="http://renderwell.github.io/keble.uiprototype/img/kc_logo.gif" />
             </a>
 
             <a class="site-logo-right right" href="/">
-                <img src="/img/oxford_emblem.gif" />
+                <img src="http://renderwell.github.io/keble.uiprototype/img/oxford_emblem.gif" />
             </a>
         </div>
 
