Further ui tweaks.

--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@ Parties of more than 8 people must pre-book with the Porters’ Lodge.</p>
             </div>
 
             <aside class="column medium-6 listings">
-                <div class="row collapse">
+                <div class="row collapse" data-equalizer>
                     <section class="news-listing column medium-6">
                         <h3 class="block-header">News</h3>
 
-                        <ul class="block-list">
+                        <ul class="block-list" data-equalizer-watch>
                             <li>
                                 <h4 class="h">Warden hosts reception for alumni and friends in Tokyo</h4>
 
@@ -134,7 +134,7 @@ Parties of more than 8 people must pre-book with the Porters’ Lodge.</p>
                     <section class="events-listing column medium-6">
                         <h3 class="block-header">Events</h3>
 
-                        <ul class="block-list">
+                        <ul class="block-list" data-equalizer-watch>
                             <li>
                                 <h4 class="h">Keble College Drinks in Washington DC</h4>
 
