--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Keble UIPrototype</title>
-  <meta name="description" content="Keble UIPrototype">
+  <meta name="description" content="Keble UIPrototype
+">
 
-  <link rel="stylesheet" href="http://renderwell.github.io/keble.uiprototype/css/app.css">
-  <link rel="stylesheet" href="http://renderwell.github.io/keble.uiprototype/css/app.css.map">
-  <link rel="canonical" href="http://renderwell.github.io/keble.uiprototype">
-  <link rel="alternate" type="application/rss+xml" title="Keble UIPrototype" href="http://renderwell.github.io/keble.uiprototype/feed.xml">
+  <link rel="stylesheet" href="/css/app.css">
+  <link rel="stylesheet" href="/css/app.css.map">
+  <link rel="canonical" href="http://renderwell.co.uk/">
+  <link rel="alternate" type="application/rss+xml" title="Keble UIPrototype" href="http://renderwell.co.uk/feed.xml">
   
-  <script src="http://renderwell.github.io/keble.uiprototype/js/modernizr.js"></script>
+  <script src="/js/modernizr.js"></script>
 </head>
 
 <body>
@@ -24,11 +25,11 @@
     <div class="row site-header-inner">
         <div class="site-header-top clearfix">
             <a class="site-logo left" href="/" role="button" tabindex="0">
-                <img src="http://renderwell.github.io/keble.uiprototype/img/kc_logo.gif" />
+                <img src="/img/kc_logo.gif" />
             </a>
 
             <a class="site-logo-right right" href="/">
-                <img src="http://renderwell.github.io/keble.uiprototype/img/oxford_emblem.gif" />
+                <img src="/img/oxford_emblem.gif" />
             </a>
         </div>
 
@@ -40,7 +41,7 @@
                     id="site-search"
                     class="site-search row"
                     >
-                    <div class="column small-10">
+                    <div class="column small-9">
                         <input name="textsearch"
                                type="text"
                                placeholder="search"
@@ -51,12 +52,20 @@
                                class="search-text round">
                     </div>
 
-                    <div class="column small-2">
+                    <div class="column small-3">
                         <button name="submit">
                             <i class="icon-search">
                                 <span class="hide">Search</span>
                             </i>
                         </button>
+
+                        <a class="item top-menu-icon right-off-canvas-toggle"
+                        href="#"
+                        role="button" tabindex="3">
+                            <i class="icon-menu">
+                                <span class="hide">menu</span>
+                            </i>
+                        </a>
                     </div>
 
                 </form>
@@ -130,8 +139,8 @@
 <header class="site-header-mobile show-for-small-only">
     <div class="site-header-mobile-top">
         <a class="site-logo" href="/" role="button" tabindex="0">
-            <img class="site-logo-keble" src="http://renderwell.github.io/keble.uiprototype/img/kc_logo_mobile.gif" />
-            <img class="site-logo-oxford" src="http://renderwell.github.io/keble.uiprototype/img/oxford_emblem_mobile.gif" />
+            <img class="site-logo-keble" src="/img/kc_logo_mobile.gif" />
+            <img class="site-logo-oxford" src="/img/oxford_emblem_mobile.gif" />
         </a>
 
         <div class="top-icons right">
@@ -204,7 +213,7 @@
                 <div class="cycle-pager"></div>
                 <div class="slide">
                     <a href="#">
-                        <img src="http://renderwell.github.io/keble.uiprototype/img/slide1.jpg" />
+                        <img src="/img/slide1.jpg" />
                         <div class="slide-desc">
                             <h4 class="slide-title">Pellentesque pellentesque eleifend enim, vitae dapibus ex finibus.</h4>
                             <p></p>
@@ -213,7 +222,7 @@
                 </div>
                 <div class="slide">
                     <a href="#">
-                        <img src="http://renderwell.github.io/keble.uiprototype/img/slide2.jpg" />
+                        <img src="/img/slide2.jpg" />
                         <div class="slide-desc">
                             <h4 class="slide-title">Vivamus sit amet velit tristique, vestibulum ante in, fermentum nisl.</h4>
                             <p></p>
@@ -222,7 +231,7 @@
                 </div>
                 <div class="slide">
                     <a href="#">
-                        <img src="http://renderwell.github.io/keble.uiprototype/img/slide3.jpg" />
+                        <img src="/img/slide3.jpg" />
                         <div class="slide-desc">
                             <h4 class="slide-title">Curabitur bibendum ullamcorper iaculis. Nullam eu ultricies justo.</h4>
                             <p></p>
@@ -231,7 +240,7 @@
                 </div>
                 <div class="slide">
                     <a href="#">
-                        <img src="http://renderwell.github.io/keble.uiprototype/img/slide4.jpg" />
+                        <img src="/img/slide4.jpg" />
                         <div class="slide-desc">
                             <h4 class="slide-title">Praesent mollis congue dignissim. Phasellus varius, augue in feugiat.</h4>
                             <p></p>
@@ -240,7 +249,7 @@
                 </div>
                 <div class="slide">
                     <a href="#">
-                        <img src="http://renderwell.github.io/keble.uiprototype/img/slide5.jpg" />
+                        <img src="/img/slide5.jpg" />
                         <div class="slide-desc">
                             <h4 class="slide-title">Suspendisse facilisis ullamcorper est, ac tincidunt mauris varius et.</h4>
                             <p></p>
@@ -269,7 +278,7 @@ Parties of more than 8 people must pre-book with the Porters’ Lodge.</p>
                 <section class="recent-publications">
                     <h2 class="section-heading">Recent Publications</h2>
 
-                    <img src="http://renderwell.github.io/keble.uiprototype/img/recent.jpg" />
+                    <img src="/img/recent.jpg" />
 
                     <div class="section-text">
                         <p>The latest edition of the alumni newsletter, the brick is available to view.</p>
@@ -280,15 +289,15 @@ Parties of more than 8 people must pre-book with the Porters’ Lodge.</p>
             </div>
 
             <aside class="column medium-6 listings">
-                <div class="row collapse">
+                <div class="row collapse" data-equalizer>
                     <section class="news-listing column medium-6">
                         <h3 class="block-header">News</h3>
 
-                        <ul class="block-list">
+                        <ul class="block-list" data-equalizer-watch>
                             <li>
                                 <h4 class="h">Warden hosts reception for alumni and friends in Tokyo</h4>
 
-                                <img src="http://renderwell.github.io/keble.uiprototype/img/newslist1.jpg" />
+                                <img src="/img/newslist1.jpg" />
 
                                 <p>Warden Sir Jonathan Phillips visited Japan on the 14th of March, receiving a wonderful warm...</p>
 
@@ -299,7 +308,7 @@ Parties of more than 8 people must pre-book with the Porters’ Lodge.</p>
                             <li>
                                 <h4 class="h">Keble Oarsmen and Women in 2016 Boat Race</h4>
 
-                                <img src="http://renderwell.github.io/keble.uiprototype/img/newslist2.jpg" />
+                                <img src="/img/newslist2.jpg" />
 
                                 <p>The crew announcement and weigh-in for The Cancer Research UK Boat Race took place today...</p>
 
@@ -309,7 +318,7 @@ Parties of more than 8 people must pre-book with the Porters’ Lodge.</p>
                             <li>
                                 <h4 class="h">Developing the H B Allen Centre: March 2016 update</h4>
 
-                                <img src="http://renderwell.github.io/keble.uiprototype/img/newslist3.jpg" />
+                                <img src="/img/newslist3.jpg" />
 
                                 <p>Since the announcement of the £25million donation from the H B Allen Charitable Trust, plans...</p>
 
@@ -321,7 +330,7 @@ Parties of more than 8 people must pre-book with the Porters’ Lodge.</p>
                     <section class="events-listing column medium-6">
                         <h3 class="block-header">Events</h3>
 
-                        <ul class="block-list">
+                        <ul class="block-list" data-equalizer-watch>
                             <li>
                                 <h4 class="h">Keble College Drinks in Washington DC</h4>
 
@@ -579,9 +588,9 @@ Parties of more than 8 people must pre-book with the Porters’ Lodge.</p>
         </ul>
     </div>
 </footer>
-<script src="http://renderwell.github.io/keble.uiprototype/js/jquery.js "></script>
-<script src="http://renderwell.github.io/keble.uiprototype/js/foundation.js "></script>
-<script src="http://renderwell.github.io/keble.uiprototype/js/app.js"></script>
+<script src="/js/jquery.js "></script>
+<script src="/js/foundation.js "></script>
+<script src="/js/app.js"></script>
 
 
 
