--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             <header class="site-header show-for-medium-up">
     <div class="row site-header-inner">
         <div class="site-header-top clearfix">
-            <a class="site-logo left" href="/" role="button" tabindex="0">
+            <a class="site-logo left" href="http://renderwell.github.io/keble.uiprototype" role="button" tabindex="0">
                 <img src="http://renderwell.github.io/keble.uiprototype/img/kc_logo.gif" />
             </a>
 
-            <a class="site-logo-right right" href="/">
+            <a class="site-logo-right right" href="#">
                 <img src="http://renderwell.github.io/keble.uiprototype/img/oxford_emblem.gif" />
             </a>
         </div>
@@ -138,7 +138,7 @@
 
 <header class="site-header-mobile show-for-small-only">
     <div class="site-header-mobile-top">
-        <a class="site-logo" href="/" role="button" tabindex="0">
+        <a class="site-logo" href="http://renderwell.github.io/keble.uiprototype" role="button" tabindex="0">
             <img class="site-logo-keble" src="http://renderwell.github.io/keble.uiprototype/img/kc_logo_mobile.gif" />
             <img class="site-logo-oxford" src="http://renderwell.github.io/keble.uiprototype/img/oxford_emblem_mobile.gif" />
         </a>
