--- a/testpage.html
+++ b/testpage.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="column">
+<div class="columnx">
     <div class="row">
         <nav class="column medium-3">
             NAV
