--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ layout: default
                     <a href="#">
                         <img src="{{ "/img/slide1.jpg" }}" />
                         <div class="slide-desc">
-                            <h4 class="slide-title">Pellentesque pellentesque eleifend enim, vitae dapibus ex finibus.</h4>
+                            <h4 class="slide-title">Z Pellentesque pellentesque eleifend enim, vitae dapibus ex finibus.</h4>
                             <p></p>
                         </div>
                     </a>
