--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     <a href="#">
                         <img src="http://renderwell.github.io/keble.uiprototype/img/slide1.jpg" />
                         <div class="slide-desc">
-                            <h4 class="slide-title">X Pellentesque pellentesque eleifend enim, vitae dapibus ex finibus.</h4>
+                            <h4 class="slide-title">Pellentesque pellentesque eleifend enim, vitae dapibus ex finibus.</h4>
                             <p></p>
                         </div>
                     </a>
@@ -224,7 +224,7 @@
                     <a href="#">
                         <img src="http://renderwell.github.io/keble.uiprototype/img/slide2.jpg" />
                         <div class="slide-desc">
-                            <h4 class="slide-title">X Vivamus sit amet velit tristique, vestibulum ante in, fermentum nisl.</h4>
+                            <h4 class="slide-title">Vivamus sit amet velit tristique, vestibulum ante in, fermentum nisl.</h4>
                             <p></p>
                         </div>
                     </a>
@@ -233,7 +233,7 @@
                     <a href="#">
                         <img src="http://renderwell.github.io/keble.uiprototype/img/slide3.jpg" />
                         <div class="slide-desc">
-                            <h4 class="slide-title">X Curabitur bibendum ullamcorper iaculis. Nullam eu ultricies justo.</h4>
+                            <h4 class="slide-title">Curabitur bibendum ullamcorper iaculis. Nullam eu ultricies justo.</h4>
                             <p></p>
                         </div>
                     </a>
@@ -242,7 +242,7 @@
                     <a href="#">
                         <img src="http://renderwell.github.io/keble.uiprototype/img/slide4.jpg" />
                         <div class="slide-desc">
-                            <h4 class="slide-title">X Praesent mollis congue dignissim. Phasellus varius, augue in feugiat.</h4>
+                            <h4 class="slide-title">Praesent mollis congue dignissim. Phasellus varius, augue in feugiat.</h4>
                             <p></p>
                         </div>
                     </a>
@@ -251,7 +251,7 @@
                     <a href="#">
                         <img src="http://renderwell.github.io/keble.uiprototype/img/slide5.jpg" />
                         <div class="slide-desc">
-                            <h4 class="slide-title">X Suspendisse facilisis ullamcorper est, ac tincidunt mauris varius et.</h4>
+                            <h4 class="slide-title">Suspendisse facilisis ullamcorper est, ac tincidunt mauris varius et.</h4>
                             <p></p>
                         </div>
                     </a>
@@ -267,7 +267,7 @@
                     <p>Keble College is one of the largest of the constituent colleges of the University of Oxford with 410 undergraduate and 250 graduate students. It was the wish of our founders in 1870 to extend access to the University more widely, and the College has a continuing commitment to inclusiveness. The College prides itself on the academic achievements of its students, and aims to offer a supportive environment in which learning can flourish. Keble is a vibrant community whose students excel not only academically, but also in music, drama, and sport. We pride ourselves on our traditions, but we are forward looking, as shown by our exciting plans for enhancing graduate provision on the College’s Acland site within a few minutes walk from the main College site.</p>
 
                     <ul>
-                        <li><a href="http://redux.js.org/">Redux</a></li>
+                        <li><a href="http://redux.js.org/" target="_parent">Redux</a></li>
                     </ul>
                   
                     <p>Keble College welcomes visitors daily from 2.00pm – 5.00pm.
