--- a/index.html
+++ b/index.html
@@ -266,8 +266,12 @@
 
                     <p>Keble College is one of the largest of the constituent colleges of the University of Oxford with 410 undergraduate and 250 graduate students. It was the wish of our founders in 1870 to extend access to the University more widely, and the College has a continuing commitment to inclusiveness. The College prides itself on the academic achievements of its students, and aims to offer a supportive environment in which learning can flourish. Keble is a vibrant community whose students excel not only academically, but also in music, drama, and sport. We pride ourselves on our traditions, but we are forward looking, as shown by our exciting plans for enhancing graduate provision on the College’s Acland site within a few minutes walk from the main College site.</p>
 
+                    <h3>Test Links</h3>
                     <ul>
-                        <li><a href="http://redux.js.org/" target="_parent">Redux</a></li>
+                        <li><a href="http://redux.js.org" target="_parent">Redux</a></li>
+                        <li><a href="https://www.aerian.com/our-work/project/cnn-africa-view" target="_parent">Aerian</a></li>
+                        <li><a href="http://www.bbc.co.uk" target="_parent">BBC</a></li>
+                        <li><a href="http://edition.cnn.com" target="_parent">CNN</a></li>
                     </ul>
                   
                     <p>Keble College welcomes visitors daily from 2.00pm – 5.00pm.
