--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
               <!-- Right Nav Section -->
                 <ul class="left">
                     <li class="active">
-                        <a href="/">Home</a>
+                        <a href=".">Home</a>
                     </li>
 
                     <li>
-                        <a href="/about">About Keble</a>
+                        <a href="about">About Keble</a>
                     </li>
 
                     <li>
