--- a/about.html
+++ b/about.html
@@ -200,65 +200,6 @@
                     <div class="wrapper">
                         <div class="home">
     <main class="column">
-        <div class="row slideshow-wrapper">
-            <div class="cycle-slideshow"
-                data-cycle-swipe=true
-                data-cycle-swipe-fx=scrollHorz
-                data-cycle-fx="fade"
-                data-cycle-slides="> .slide"
-                data-cycle-speed="2000"
-                data-cycle-timeout="5000"
-                data-cycle-auto-height="calc"
-                data-cycle-pager-template="<span>{{slideNum}}</span>">
-                <div class="cycle-pager"></div>
-                <div class="slide">
-                    <a href="#">
-                        <img src="http://renderwell.github.io/keble.uiprototype/img/slide1.jpg" />
-                        <div class="slide-desc">
-                            <h4 class="slide-title">Pellentesque pellentesque eleifend enim, vitae dapibus ex finibus.</h4>
-                            <p></p>
-                        </div>
-                    </a>
-                </div>
-                <div class="slide">
-                    <a href="#">
-                        <img src="http://renderwell.github.io/keble.uiprototype/img/slide2.jpg" />
-                        <div class="slide-desc">
-                            <h4 class="slide-title">Vivamus sit amet velit tristique, vestibulum ante in, fermentum nisl.</h4>
-                            <p></p>
-                        </div>
-                    </a>
-                </div>
-                <div class="slide">
-                    <a href="#">
-                        <img src="http://renderwell.github.io/keble.uiprototype/img/slide3.jpg" />
-                        <div class="slide-desc">
-                            <h4 class="slide-title">Curabitur bibendum ullamcorper iaculis. Nullam eu ultricies justo.</h4>
-                            <p></p>
-                        </div>
-                    </a>
-                </div>
-                <div class="slide">
-                    <a href="#">
-                        <img src="http://renderwell.github.io/keble.uiprototype/img/slide4.jpg" />
-                        <div class="slide-desc">
-                            <h4 class="slide-title">Praesent mollis congue dignissim. Phasellus varius, augue in feugiat.</h4>
-                            <p></p>
-                        </div>
-                    </a>
-                </div>
-                <div class="slide">
-                    <a href="#">
-                        <img src="http://renderwell.github.io/keble.uiprototype/img/slide5.jpg" />
-                        <div class="slide-desc">
-                            <h4 class="slide-title">Suspendisse facilisis ullamcorper est, ac tincidunt mauris varius et.</h4>
-                            <p></p>
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </div>
-
         <div class="row main-content">
             <div class="column medium-6">
                 <article class="intro">
@@ -297,92 +238,7 @@ Parties of more than 8 people must pre-book with the Porters’ Lodge.</p>
             </div>
 
             <aside class="column medium-6 listings">
-                <div class="row collapse" data-equalizer>
-                    <section class="news-listing column medium-6">
-                        <h3 class="block-header">News</h3>
-
-                        <ul class="block-list" data-equalizer-watch>
-                            <li>
-                                <h4 class="h">Warden hosts reception for alumni and friends in Tokyo</h4>
-
-                                <img src="http://renderwell.github.io/keble.uiprototype/img/newslist1.jpg" />
-
-                                <p>Warden Sir Jonathan Phillips visited Japan on the 14th of March, receiving a wonderful warm...</p>
-
-
-                                <a href="#" class="more-link">more</a>
-                            </li>
-
-                            <li>
-                                <h4 class="h">Keble Oarsmen and Women in 2016 Boat Race</h4>
-
-                                <img src="http://renderwell.github.io/keble.uiprototype/img/newslist2.jpg" />
-
-                                <p>The crew announcement and weigh-in for The Cancer Research UK Boat Race took place today...</p>
-
-                                <a href="#" class="more-link">more</a>
-                            </li>
-
-                            <li>
-                                <h4 class="h">Developing the H B Allen Centre: March 2016 update</h4>
-
-                                <img src="http://renderwell.github.io/keble.uiprototype/img/newslist3.jpg" />
-
-                                <p>Since the announcement of the £25million donation from the H B Allen Charitable Trust, plans...</p>
-
-                                <a href="#" class="more-link">more</a>
-                            </li>
-                        </ul>
-                    </section>
-
-                    <section class="events-listing column medium-6">
-                        <h3 class="block-header">Events</h3>
-
-                        <ul class="block-list" data-equalizer-watch>
-                            <li>
-                                <h4 class="h">Keble College Drinks in Washington DC</h4>
-
-                                <date>Saturday 09 April 2016</date>
-
-                                <p>Keble Alumni and friends are cordially invited to a College Drinks Reception with the Warden,...</p>
-
-                                <a href="#" class="more-link">more</a>
-                            </li>
-
-                            <li>
-                                <h4 class="h">Keble in the Big Apple</h4>
-
-                                <p>Join The Warden and Director of Development Jenny Tudge, at a drinks reception in New...</p>
-
-                                <a href="#" class="more-link">more</a>
-                            </li>
-
-                            <li>
-                                <h4 class="h">Graduation and Degree Day Lunch for 2015 Finalists</h4>
-
-                                <p>Details of the Ceremony and invitations to lunch in College have now been emailed to...</p>
-
-                                <a href="#" class="more-link">more</a>
-                            </li>
-
-                            <li>
-                                <h4 class="h">May London Lecture</h4>
-
-                                <p>'Why I Love the BBC' by Tony Hall (1970) Director General of the BBC. Sold...</p>
-
-                                <a href="#" class="more-link">more</a>
-                            </li>
-
-                            <li>
-                                <h4 class="h">Maths and Computing Reunion Dinner</h4>
-
-                                <p>Celebrating Professor Stephen Cameron’s 30 years at Keble. Online booking open...</p>
-
-                                <a href="#" class="more-link">more</a>
-                            </li>
-                        </ul>
-                    </section>
-                </div>
+                SLIDER HERE
             </aside>
         </div>
     </main>
