--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <meta name="description" content="Keble UIPrototype
 ">
 
-  <link rel="stylesheet" href="http://renderwell.github.io/keble.uiprototype/css/app.css">
-  <link rel="stylesheet" href="http://renderwell.github.io/keble.uiprototype/css/app.css.map">
-  <link rel="canonical" href="http://renderwell.github.io/keble.uiprototype">
+  <link rel="stylesheet" href="https://renderwell.github.io/keble.uiprototype/css/app.css">
+  <link rel="stylesheet" href="https://renderwell.github.io/keble.uiprototype/css/app.css.map">
+  <link rel="canonical" href="https://renderwell.github.io/keble.uiprototype">
   <link rel="alternate" type="application/rss+xml" title="Keble UIPrototype" href="http://renderwell.github.io/keble.uiprototype/feed.xml">
   
-  <script src="http://renderwell.github.io/keble.uiprototype/js/modernizr.js"></script>
+  <script src="https://renderwell.github.io/keble.uiprototype/js/modernizr.js"></script>
 </head>
 
 <body>
@@ -596,9 +596,9 @@ Parties of more than 8 people must pre-book with the Porters’ Lodge.</p>
         </ul>
     </div>
 </footer>
-<script src="http://renderwell.github.io/keble.uiprototype/js/jquery.js "></script>
-<script src="http://renderwell.github.io/keble.uiprototype/js/foundation.js "></script>
-<script src="http://renderwell.github.io/keble.uiprototype/js/app.js"></script>
+<script src="https://renderwell.github.io/keble.uiprototype/js/jquery.js "></script>
+<script src="https://renderwell.github.io/keble.uiprototype/js/foundation.js "></script>
+<script src="https://renderwell.github.io/keble.uiprototype/js/app.js"></script>
 
 
 
