--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
             <header class="site-header show-for-medium-up">
     <div class="row site-header-inner">
         <div class="site-header-top clearfix">
-            <a class="site-logo left" href="http://renderwell.github.io/keble.uiprototype" role="button" tabindex="0">
+            <a class="site-logo left" href="https://renderwell.github.io/keble.uiprototype" role="button" tabindex="0">
                 <img src="http://renderwell.github.io/keble.uiprototype/img/kc_logo.gif" />
             </a>
 
             <a class="site-logo-right right" href="#">
-                <img src="http://renderwell.github.io/keble.uiprototype/img/oxford_emblem.gif" />
+                <img src="https://renderwell.github.io/keble.uiprototype/img/oxford_emblem.gif" />
             </a>
         </div>
 
@@ -138,9 +138,9 @@
 
 <header class="site-header-mobile show-for-small-only">
     <div class="site-header-mobile-top">
-        <a class="site-logo" href="http://renderwell.github.io/keble.uiprototype" role="button" tabindex="0">
-            <img class="site-logo-keble" src="http://renderwell.github.io/keble.uiprototype/img/kc_logo_mobile.gif" />
-            <img class="site-logo-oxford" src="http://renderwell.github.io/keble.uiprototype/img/oxford_emblem_mobile.gif" />
+        <a class="site-logo" href="https://renderwell.github.io/keble.uiprototype" role="button" tabindex="0">
+            <img class="site-logo-keble" src="https://renderwell.github.io/keble.uiprototype/img/kc_logo_mobile.gif" />
+            <img class="site-logo-oxford" src="https://renderwell.github.io/keble.uiprototype/img/oxford_emblem_mobile.gif" />
         </a>
 
         <div class="top-icons right">
@@ -213,7 +213,7 @@
                 <div class="cycle-pager"></div>
                 <div class="slide">
                     <a href="#">
-                        <img src="http://renderwell.github.io/keble.uiprototype/img/slide1.jpg" />
+                        <img src="https://renderwell.github.io/keble.uiprototype/img/slide1.jpg" />
                         <div class="slide-desc">
                             <h4 class="slide-title">Pellentesque pellentesque eleifend enim, vitae dapibus ex finibus.</h4>
                             <p></p>
@@ -222,7 +222,7 @@
                 </div>
                 <div class="slide">
                     <a href="#">
-                        <img src="http://renderwell.github.io/keble.uiprototype/img/slide2.jpg" />
+                        <img src="https://renderwell.github.io/keble.uiprototype/img/slide2.jpg" />
                         <div class="slide-desc">
                             <h4 class="slide-title">Vivamus sit amet velit tristique, vestibulum ante in, fermentum nisl.</h4>
                             <p></p>
@@ -231,7 +231,7 @@
                 </div>
                 <div class="slide">
                     <a href="#">
-                        <img src="http://renderwell.github.io/keble.uiprototype/img/slide3.jpg" />
+                        <img src="https://renderwell.github.io/keble.uiprototype/img/slide3.jpg" />
                         <div class="slide-desc">
                             <h4 class="slide-title">Curabitur bibendum ullamcorper iaculis. Nullam eu ultricies justo.</h4>
                             <p></p>
@@ -240,7 +240,7 @@
                 </div>
                 <div class="slide">
                     <a href="#">
-                        <img src="http://renderwell.github.io/keble.uiprototype/img/slide4.jpg" />
+                        <img src="https://renderwell.github.io/keble.uiprototype/img/slide4.jpg" />
                         <div class="slide-desc">
                             <h4 class="slide-title">Praesent mollis congue dignissim. Phasellus varius, augue in feugiat.</h4>
                             <p></p>
