--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://renderwell.github.io/keble.uiprototype/css/app.css">
   <link rel="stylesheet" href="https://renderwell.github.io/keble.uiprototype/css/app.css.map">
   <link rel="canonical" href="https://renderwell.github.io/keble.uiprototype">
-  <link rel="alternate" type="application/rss+xml" title="Keble UIPrototype" href="http://renderwell.github.io/keble.uiprototype/feed.xml">
+  <link rel="alternate" type="application/rss+xml" title="Keble UIPrototype" href="https://renderwell.github.io/keble.uiprototype/feed.xml">
   
   <script src="https://renderwell.github.io/keble.uiprototype/js/modernizr.js"></script>
 </head>
@@ -25,7 +25,7 @@
     <div class="row site-header-inner">
         <div class="site-header-top clearfix">
             <a class="site-logo left" href="https://renderwell.github.io/keble.uiprototype" role="button" tabindex="0">
-                <img src="http://renderwell.github.io/keble.uiprototype/img/kc_logo.gif" />
+                <img src="https://renderwell.github.io/keble.uiprototype/img/kc_logo.gif" />
             </a>
 
             <a class="site-logo-right right" href="#">
