--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ Parties of more than 8 people must pre-book with the Porters’ Lodge.</p>
                             <li>
                                 <h4 class="h">Warden hosts reception for alumni and friends in Tokyo</h4>
 
-                                <img src="http://renderwell.github.io/keble.uiprototype/img/newslist1.jpg" />
+                                <img src="https://renderwell.github.io/keble.uiprototype/img/newslist1.jpg" />
 
                                 <p>Warden Sir Jonathan Phillips visited Japan on the 14th of March, receiving a wonderful warm...</p>
 
@@ -316,7 +316,7 @@ Parties of more than 8 people must pre-book with the Porters’ Lodge.</p>
                             <li>
                                 <h4 class="h">Keble Oarsmen and Women in 2016 Boat Race</h4>
 
-                                <img src="http://renderwell.github.io/keble.uiprototype/img/newslist2.jpg" />
+                                <img src="https://renderwell.github.io/keble.uiprototype/img/newslist2.jpg" />
 
                                 <p>The crew announcement and weigh-in for The Cancer Research UK Boat Race took place today...</p>
 
@@ -326,7 +326,7 @@ Parties of more than 8 people must pre-book with the Porters’ Lodge.</p>
                             <li>
                                 <h4 class="h">Developing the H B Allen Centre: March 2016 update</h4>
 
-                                <img src="http://renderwell.github.io/keble.uiprototype/img/newslist3.jpg" />
+                                <img src="https://renderwell.github.io/keble.uiprototype/img/newslist3.jpg" />
 
                                 <p>Since the announcement of the £25million donation from the H B Allen Charitable Trust, plans...</p>
 
