--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ Parties of more than 8 people must pre-book with the Porters’ Lodge.</p>
                 <section class="recent-publications">
                     <h2 class="section-heading">Recent Publications</h2>
 
-                    <img src="http://renderwell.github.io/keble.uiprototype/img/recent.jpg" />
+                    <img src="https://renderwell.github.io/keble.uiprototype/img/recent.jpg" />
 
                     <div class="section-text">
                         <p>The latest edition of the alumni newsletter, the brick is available to view.</p>
