--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                 </div>
                 <div class="slide">
                     <a href="#">
-                        <img src="http://renderwell.github.io/keble.uiprototype/img/slide5.jpg" />
+                        <img src="https://renderwell.github.io/keble.uiprototype/img/slide5.jpg" />
                         <div class="slide-desc">
                             <h4 class="slide-title">Suspendisse facilisis ullamcorper est, ac tincidunt mauris varius et.</h4>
                             <p></p>
